# CnC_Generals_Zero_Hour

./: .gitignore
Generals/Code/: CMakeLists.txt
Generals/Code/GameEngine/Include/Common/: AsciiString.h  GameMemory.h  UnicodeString.h
Generals/Code/GameEngine/Include/Precompiled/: PreRTS.h
Generals/Code/GameEngine/Source/GameClient/: GameText.cpp
Generals/Code/GameEngineDevice/: CMakeLists.txt
Generals/Code/GameEngineDevice/Include/SDL3Device/GameClient/: SDL3Mouse.h
Generals/Code/GameEngineDevice/Include/W3DDevice/GameClient/: HeightMap.h  W3DBibBuffer.h  W3DBridgeBuffer.h  W3DCustomEdging.h  W3DDebugIcons.h  W3DGranny.h  W3DMirror.h  W3DPoly.h  W3DRoadBuffer.h  W3DShadow.h  W3DStatusCircle.h  W3DTerrainTracks.h  W3DTreeBuffer.h  W3DVolumetricShadow.h  W3DWater.h  W3DWaypointBuffer.h
Generals/Code/GameEngineDevice/Include/W3DDevice/GameClient/Module/: W3DLaserDraw.h
Generals/Code/GameEngineDevice/Source/W3DDevice/GameClient/: W3DAssetManager.cpp  W3DGranny.cpp  W3DShaderManager.cpp  W3DShroud.cpp  W3DTerrainTracks.cpp  W3DWebBrowser.cpp
Generals/Code/GameEngineDevice/Source/W3DDevice/GameClient/Shadow/: W3DProjectedShadow.cpp  W3DShadow.cpp  W3DVolumetricShadow.cpp
Generals/Code/GameEngineDevice/Source/W3DDevice/GameClient/Water/: W3DWater.cpp  W3DWaterTracks.cpp
Generals/Code/Libraries/Include/Lib/: BaseType.h
Generals/Code/Libraries/Source/WWVegas/: CMakeLists.txt  WWprecompiled.h
Generals/Code/Libraries/Source/WWVegas/WW3D2/: FramGrab.cpp  aabtree.cpp  aabtree.h  aabtreebuilder.cpp  aabtreebuilder.h  agg_def.cpp  agg_def.h  animobj.h  assetmgr.cpp  assetmgr.h  bitmaphandler.cpp  bitmaphandler.h  boxrobj.cpp  boxrobj.h  bw_render.h  bwrender.cpp  bwrender.h  camera.cpp  camera.h  classid.h  collect.cpp  collect.h  colorspace.h  coltest.h  composite.cpp  composite.h  dazzle.cpp  dazzle.h  ddsfile.cpp  ddsfile.h  decalmsh.cpp  decalmsh.h  decalsys.cpp  decalsys.h  distlod.cpp  distlod.h  dynamesh.cpp  dynamesh.h  font3d.cpp  font3d.h  (+140 more)
Generals/Code/Libraries/Source/WWVegas/WW3D2/DirectX/: dx8caps.cpp  dx8caps.h  dx8fvf.cpp  dx8fvf.h  dx8indexbuffer.cpp  dx8indexbuffer.h  dx8list.h  dx8polygonrenderer.cpp  dx8polygonrenderer.h  dx8renderer.cpp  dx8renderer.h  dx8texman.cpp  dx8texman.h  dx8vertexbuffer.cpp  dx8vertexbuffer.h  dx8webbrowser.cpp  dx8webbrowser.h  dx8wrapper.cpp  dx8wrapper.h
Generals/Code/Libraries/Source/WWVegas/WWAudio/: AABTreeSoundCullClass.h  AudibleSound.cpp  AudibleSound.h  AudioEvents.h  AudioSaveLoad.cpp  AudioSaveLoad.h  LogicalListener.h  LogicalSound.h  PriorityVector.h  Sound3D.cpp  Sound3D.h  SoundBuffer.cpp  SoundBuffer.h  SoundChunkIDs.h  SoundCullObj.h  SoundScene.cpp  SoundScene.h  SoundSceneObj.cpp  SoundSceneObj.h  Threads.cpp  Threads.h  Utils.cpp  Utils.h  WWAudio.cpp  WWAudio.h  soundstreamhandle.h
Generals/Code/Libraries/Source/WWVegas/WWDebug/: wwdebug.cpp  wwdebug.h  wwmemlog.cpp  wwprofile.cpp
Generals/Code/Libraries/Source/WWVegas/WWDownload/: Download.cpp  Download.h  downloaddefs.h  ftp.cpp  ftp.h  ftpdefs.h
Generals/Code/Libraries/Source/WWVegas/WWLib/: INI.H  Point.h  RAWFILE.H  Vector.H  WWCOMUtil.h  XPIPE.H  XSTRAW.H  _convert.cpp  _mono.cpp  _timer.cpp  always.h  argv.h  b64pipe.cpp  b64pipe.h  b64straw.cpp  base64.cpp  binheap.h  blit.cpp  blit.h  blowfish.cpp  blowfish.h  bsurface.h  buff.cpp  buff.h  bufffile.cpp  chunkio.h  convert.cpp  cpudetect.cpp  cpudetect.h  crc.cpp  crc.h  cstraw.cpp  data.cpp  data.h  ddraw.cpp  dib.h  dsurface.cpp  dsurface.h  ffactory.h  fixed.h  (+87 more)
Generals/Code/Libraries/Source/WWVegas/WWMath/: aabox.cpp  aabox.h  aabtreecull.cpp  aabtreecull.h  cardinalspline.cpp  castres.h  colmath.cpp  colmath.h  colmathaabox.cpp  colmathaabox.h  colmathaabtri.cpp  colmathfrustum.cpp  colmathfrustum.h  colmathline.cpp  colmathobbobb.cpp  colmathobbox.cpp  colmathobbtri.cpp  colmathplane.cpp  colmathplane.h  colmathsphere.cpp  cullsys.cpp  cullsys.h  culltype.h  curve.cpp  curve.h  euler.h  frustum.cpp  frustum.h  gridcull.cpp  gridcull.h  lineseg.cpp  lineseg.h  lookuptable.cpp  lookuptable.h  matrix3.cpp  matrix3.h  matrix3d.cpp  matrix3d.h  matrix4.cpp  matrix4.h  (+23 more)
Generals/Code/Libraries/Source/WWVegas/WWSaveLoad/: definition.cpp  definition.h  definitionclassids.h  definitionfactory.h  definitionfactorymgr.cpp  definitionfactorymgr.h  definitionmgr.cpp  definitionmgr.h  editable.h  parameter.cpp  parameter.h  parameterlist.h  parametertypes.h  persist.h  persistfactory.h  pointerremap.cpp  pointerremap.h  saveload.cpp  saveload.h  saveloadstatus.h  saveloadsubsystem.h  simpleparameter.h
Generals/Code/Libraries/Source/WWVegas/Wwutil/: mathutil.cpp  miscutil.cpp  miscutil.h
Generals/Code/Main/: LinMain.h  SDLMain.cpp  SDLMain.h  WinMain.cpp  WinMain.h
Generals/Code/Tools/Autorun/: CDCNTRL.H  GETCD.CPP  IGR.cpp  POINT.h
Generals/Code/Tools/WW3D/max2w3d/: LightGlareSave.h  MeshDeform.h  MeshDeformData.h  MeshDeformDefs.h  MeshDeformSave.h  MeshDeformSaveSet.h  MeshDeformSet.h  MeshDeformUndo.h  SnapPoints.cpp  TARGA.CPP  aabtreebuilder.cpp  aabtreebuilder.h  bchannel.h  colboxsave.h  dazzlesave.h  geometryexporttask.h  hiersave.h  hlodsave.h  maxworldinfo.h  meshbuild.h  meshcon.h  meshsave.h  motion.h  nullsave.h  simpdib.h  util.h  vchannel.h  vxl.h  vxldbg.h  vxllayer.cpp  vxllayer.h  w3ddesc.h  w3ddlg.h  w3dexp.cpp  w3dexp.h  w3dmtl.h
Generals/Code/Tools/WW3D/pluglib/: PROGRESS.H  Vector.CPP  WWmatrix3.cpp  WWmatrix3.h  aaplane.h  always.h  chunkio.cpp  hsv.cpp  matrix3d.cpp  matrix3d.h  matrix4.h  nodefilt.h  nodelist.h  palette.cpp  plane.h  pluglib.dsp  rawfile.cpp  rgb.cpp  uarray.h  vector2.h  vector3.h  vector3i.h  vector4.h  w3d_file.h  w3dquat.cpp  w3dquat.h  wwmath.h
Generals/Code/Tools/WorldBuilder/include/: CUndoable.h  DrawObject.h  WorldBuilderView.h  wbview3d.h
Generals/Code/Tools/WorldBuilder/src/: ShadowOptions.cpp  WHeightMapEdit.cpp  wbview3d.cpp
GeneralsMD/: .gitignore
GeneralsMD/Code/Tools/Autorun/: CDCNTRL.H  GETCD.CPP  IGR.cpp  POINT.h
GeneralsMD/Code/Tools/WW3D/max2w3d/: aabtreebuilder.h  bchannel.h  hiersave.h  hlodsave.h  meshbuild.h  (+12 more)
(+287 files in other folders)
